[package]
name = "rust-lox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version ="4.5.20", features = ["derive"]}
colored = "2.1.0"
env_logger = "0.11.5"
graphviz-rust = "0.9.0"
log = "0.4.19"
